[project]
name = "dflow-hello"
dynamic = ["version"]
description = "dflow demo OP"
authors = [{name = "zjgemi"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha"
]
keywords = ["dflow", "OP"]
requires-python = ">=3.6"
dependencies = [
    "importlib-metadata",
    "pydflow>=1.0",
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[project.urls]
Source = "https://github.com/zjgemi/dflow-hello"
